--- a/pages/wwwroot/index.html
+++ b/pages/wwwroot/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div id="app"> <div class="loader"></div></div>
+    <div id="app"> <div class="loader"></div> <div class="center" style="margin-top:50px;">The first load can take a few seconds.</div></div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
