--- a/pages/wwwroot/index.html
+++ b/pages/wwwroot/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Umid Muzrapov</title>
     <base href="/"/>
-    <link href="/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <link href="/css/app.css" rel="stylesheet" />
-    <link href="/pages.styles.css" rel="stylesheet" />
+    <link href="css/app.css" rel="stylesheet" />
+    <link href="pages.styles.css" rel="stylesheet" />
 </head>
 
 <body>
