--- a/pages/wwwroot/index.html
+++ b/pages/wwwroot/index.html
@@ -13,7 +13,17 @@
 </head>
 
 <body>
-    <div id="app"> <div class="loader"></div> <div class="center" style="margin-top:50px;">The first load can take a few seconds.</div></div>
+    <div id="app">
+        <!-- CUBE LOADER-->
+        <div class="cube">
+            <div class="side"></div>
+            <div class="side"></div>
+            <div class="side">Umid</div>
+            <div class="side"></div>
+            <div class="side"></div>
+            <div class="side"></div>
+        </div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
