--- a/pages/wwwroot/index.html
+++ b/pages/wwwroot/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="app">
         <!-- CUBE LOADER-->
-        <div class="cube">
+        <div class="cube center">
             <div class="side"></div>
             <div class="side"></div>
             <div class="side">Umid</div>
