change loading word

--- a/pages/wwwroot/index.html
+++ b/pages/wwwroot/index.html
@@ -18,7 +18,7 @@
         <div class="cube center">
             <div class="side"></div>
             <div class="side"></div>
-            <div class="side">Umid</div>
+            <div class="side">Loading...</div>
             <div class="side"></div>
             <div class="side"></div>
             <div class="side"></div>
