--- a/pages/wwwroot/index.html
+++ b/pages/wwwroot/index.html
@@ -14,15 +14,9 @@
 
 <body>
     <div id="app">
-        <!-- CUBE LOADER-->
-        <div class="cube center">
-            <div class="side"></div>
-            <div class="side"></div>
-            <div class="side">Loading</div>
-            <div class="side"></div>
-            <div class="side"></div>
-            <div class="side"></div>
-        </div>
+        <!--LOADER-->
+        <div class="loader"></div>
+
     </div>
 
     <div id="blazor-error-ui">
@@ -31,6 +25,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 
 </html>
